[package]
name = "zenoh-dump"
version = "0.1.0"
edition = "2024"
default-run = "zenoh-dump"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.39", features = ["derive"] }
pcap-file = "2.0.0"
tokio = { version = "1.45.1", features = [
  "tokio-macros",
  "rt-multi-thread",
  "signal",
] }
tokio-scoped = "0.2.0"
tokio-util = "0.7.15"
zenoh = "1.4.0"
